--- a/index.html
+++ b/index.html
@@ -2,101 +2,129 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <title>MemeGen - Daniel waxenbaum</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>memegen</title>
+
 </head>
 
-<body class="main-layout" onload="oninit()">
-<header class="flex space-between align-center">
-   
-    <div class="logo">MemeGen</div>
-    
-    <nav class="main-nav">
-        <ul class="main-nav-list flex clean-list">
-            <li><a class="main-nav-item" href="#">About</a></li>
-            <li><a class="main-nav-item" href="#">Gallery</a></li>
-            <li><a class="main-nav-item" href="#">Memes</a></li>
-        </ul>
-        </nav>
-   
-        <button class="btn-toggle-menu" onclick1="onToggleMenu(this)" style="display: none;">Menu</button>
+<body onload="onInit()">
 
+    <div class="screen" onclick="toggleMenu()"></div>
+
+    <header class="main-header">
+        <div class="container flex space-between align-center">
+            <img class="logo" src="./design/logo.png">
+            <ul class="main-nav clean-list flex space-between align-center">
+                <li><a onclick="onCloseImg()" href="#"> Gallery </a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+           
+
+        </div>
+        <div class="mobile-menu-btn" onclick="onToggleMenu()">☰</div>
     </header>
-    <main class="main-content">
 
-        <section class="gallery gallery-layout">
-            <div class="control-panel">
-                <label>
-                    <input type="text" placeholder="Search">
-                </label>
-            </div>
-            <div class="imgs-container">
-                <img src="img/1.jpg" alt="">
-                <img src="img/2.jpg" alt="">
-                <img src="img/3.jpg" alt="">
-                <img src="img/4.jpg" alt="">
-                <img src="img/5.jpg" alt="">
-                <img src="img/6.jpg" alt="">
-                <img src="img/7.jpg" alt="">
-                <img src="img/8.jpg" alt="">
-                <img src="img/9.jpg" alt="">
-            </div>
-        </section>
 
-            </div>
-        </section>
 
-        <section class="editor">
-            <div class="control-panel">
-                <input type="text" placeholder="Your text here" oninput="onSetLineTxt(this.value)">
-            </div>
-            <div class="canvas-container">
-                <canvas width="400" height="400" style="outline: 5px solid gray">
-                </canvas>
-            </div>
-        </section>
+    <div class="images grid column">
+        <img src="img/1.jpg" alt="">
+        <img src="img/2.jpg" alt="">
+        <img src="img/3.jpg" alt="">
+        <img src="img/4.jpg" alt="">
+        <img src="img/5.jpg" alt="">
+        <img src="img/6.jpg" alt="">
+        <img src="img/7.jpg" alt="">
+        <img src="img/8.jpg" alt="">
+        <img src="img/9.jpg" alt="">
+    </div>
+</section>
 
+    <main class="main-content container">
+        <div class="gallery"></div>
+        <div class="grid-item">
+        </div>
+        <div class="open-img">
+            <div class="img-button-wrapper">
+
+                <div class="canvas-container flex">
+                    <canvas id="myCanvas" height="540" width="540"></canvas>
+                </div>
+                <div class="wrapper-btn flex">
+                    <div class="text-input-line">
+                        <input type="text" name="text" placeholder="Enter text" onkeyup="onHandleInput(this)">
+                    </div>
+                    <div class="first-line-btn">
+                        <button onclick="onChangeLineHeight(true)" class="small-icon"><img class="small-icon-img"
+                                src="design/ICONS/icons8-down-arrow-90.png"></button>
+                        <button onclick="onChangeLineHeight(false)" class="small-icon"><img class="small-icon-img"
+                                src="design/ICONS/icons8-up-90.png"></button>
+                        <button onclick="onSwitchLine()" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/up-and-down-opposite-double-arrows-side-by-side.png"></button>
+                        <button onclick="onAddNewLine()" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/add.png"></button>
+                        <button onclick="onDeleteText()" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/trash.png"></button>
+                    </div>
+
+                    <div class="second-line-btn">
+                        <button onclick="onIncreaseFont()" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/increase font - icon.png"></button>
+                        <button onclick="onDcreaseFont()" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/decrease font - icon.png"></button>
+                        <button onclick="onChangeLineAlign('left')" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/align-to-left.png"></button>
+                        <button onclick="onChangeLineAlign('center')" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/center-text-alignment.png"></button>
+                        <button onclick="onChangeLineAlign('right')" class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/align-to-right.png"></button>
+                    </div>
+                    <div class="third-line-btn">
+                        <div class="dropDown">
+                            <select name="Impact">
+                                <option value="">Impact</option>
+                                <option value="Ariel">Ariel</option>
+                                <option value="Montserrat">Montserrat</option>
+                                <option value="hamster">Hamster</option>
+                            </select>
+                        </div>
+                        <button class="small-icon"><img class="small-icon-img"
+                                src="./design/ICONS/text stroke.png"></button>
+                        <button class="small-icon">
+                            <input type="color" hidden id="color" value="#f6b73c"
+                                onclick="onColorSelect(this.value)"><label for="color">
+                                <img class="small-icon-img" src="./design/ICONS/paint-board-and-brush.png">
+                            </label>
+                        </button>
+                    </div>
+
+
+                    <div class="scrollmenu">
+                        <a href="#lef"><img class="stikers" src="design/left.png"></a>
+                        <a href="#hat"><img class="stikers" src="design/hat.png"></a>
+                        <a href="#glasses"><img class="stikers" src="design/glass.png"></a>
+                        <a href="#gift"><img class="stikers" src="design/gift.png"></a>
+                        <a href="#right"><img class="stikers" src="design/right.png"></a>
+                    </div>
+                    <div class="share-wrapper">
+                        <button onclick="" class="share-btn">share</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <footer class="main-footer flex space-between align-center">
-        <small>all rights Reserved to Daniel Waxenbaum NOV 2023 </small>
+
+    <footer class="main-footer">
+        <a><img class="footer-logo" src="./design/logo.png"></a>
+        <h4>all rights reserved 2023</h4>
     </footer>
 
-    <script src="js/services/util.service.js"></script>
-    <script src="js/services/gallery.service.js"></script>
-    <script src="js/services/meme.service.js"></script>>
-    <script src="js/meme.controller.js"></script>
-</body>
-
-</html>
-
-
-
-
-
-
-
-
+    <script src="js/controller.js"></script>
+    <script src="js/service.js"></script>
+    <!-- <script src="js/storage.js"></script> -->
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
