--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     </footer>
 
     <script src="js/controller.js"></script>
+    <script src="js/storage.js"></script>
     <script src="js/service.js"></script>
 
 </body>
